--- a/pokemonList/src/component/details/styles.Details.css
+++ b/pokemonList/src/component/details/styles.Details.css
@@ -19,6 +19,19 @@
     
   }
 
+  .row {
+    width:75px
+}
+
+.row-page {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding:0px 30px;
+}
+
+
   .headercard-details > h3 {
       font-size: 24px;
   }
@@ -71,3 +84,4 @@
     margin-left: 30px;
     text-align: center
 }
+
