--- a/pokedex/src/component/pokedex-style.scss
+++ b/pokedex/src/component/pokedex-style.scss
@@ -265,3 +265,14 @@ p {
     border-radius: 50%;
   }
   
+  .red {
+    background-color: red;
+  }
+
+  .yellow {
+    background-color: yellow;
+  }
+
+  .green {
+    background-color: green;
+  }
