--- a/pokedex/src/styles.scss
+++ b/pokedex/src/styles.scss
@@ -1,12 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
 body {
-  background-image: url("https://st2.depositphotos.com/3213441/12022/v/600/depositphotos_120226446-stock-illustration-pokemon-go-pokeball-seamless-texture.jpg");
-  margin:0;
+  background-image: url(../src/img/pokeball-background.jpg);
+  width: 100%;
+  height: auto;
+  margin:30px;
   background-repeat: repeat;
-  padding: 50px
-
-
-
+  padding: 50px;
+  font-family: 'Press Start 2P', cursive;
   
 }
-
-
